# engine

MyLib/: Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Makefile  Window.cpp  Window.h  cmake_install.cmake  color.hpp  main  main.cpp  test  test.cpp
MyLib/Log/: Logger.cpp  Logger.h
MyLib/Physics/: Forse.h
MyLib/Render/: Animation.cpp  Animation.h  Load_texture.hpp
MyLib/Render/Primitives/: BaseEntity.h  Primitives.hpp  Sprite.h
MyLib/Shaders/: Shaders.cpp  Shaders.h
MyLib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
MyLib/glfw/examples/: CMakeCache.txt  Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  simple.c  splitview  wave
MyLib/glfw/src/: Makefile  cmake_install.cmake
MyLib/glfw/tests/: CMakeCache.txt  Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
MyLib/math/: Mat2.h  Vec2.cpp  Vec2.h  Vertex2.h  math_utils.hpp
NumericMethods/: BaseNum.h
Tests/: CMakeLists.txt
